Emoji overflow bug fix

--- a/src/scss/core/_styles.scss
+++ b/src/scss/core/_styles.scss
@@ -285,6 +285,7 @@ button.ql-table[value="append-col"]::after { content: "COLS+"; }
     text-indent: -999px;
     padding-left: 20px;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .ap-copyright {
